# jdjgapi

./: .gitignore  README.md  api.html  data.db.sql  data.json  jdjg_data.db  jdjg_data.db.sql  jdjg_data.json  main.py  old_main.py  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml
old data/: endpoints.json
old html/: 404.html  api.html  index.html
static/: 404.html  data.json  endpoints.json  index.html
